<resources>
    <string name="app_name">SchoolOfMoney</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="expense_form_header">Nova despesa</string>
    <string name="expense_form_value">Valor</string>
    <string name="expense_form_description">Descrição</string>
    <string name="expense_form_date">Data</string>
    <string name="expense_form_btn1">Salvar e novo</string>
    <string name="expense_form_btn2">Salvar</string>
    <string name="expense_form_consolidated">Consolidada</string>
    <string name="exprense_form_category">Categoria</string>

    <string-array name="expense_category">
        <item>Lazer</item>
        <item>Conta de energia</item>
        <item>Internet</item>
        <item>Alimentação</item>
        <item>Saúde</item>
    </string-array>

</resources>
